Data-api sub-package and tensorflow rename - PR changes

--- a/examples/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/examples/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "from pprint import pprint\n",
     "\n",
-    "from tiledb.ml.models.tensorflow import TensorflowTileDBModel"
+    "from tiledb.ml.models.tensorflow import KerasTensorflowTileDBModel"
    ]
   },
   {
@@ -129,7 +129,7 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = TensorflowTileDBModel(uri='tiledb-keras-mnist-sequential-1')\n",
+    "tiledb_model_1 = KerasTensorflowTileDBModel(uri='tiledb-keras-mnist-sequential-1')\n",
     "\n",
     "tiledb_model_1.save(model=model,\n",
     "                    include_optimizer=True,\n",
@@ -227,7 +227,7 @@
     "model = create_model()\n",
     "model.fit(x_train[:30000], y_train[:30000], epochs=5)\n",
     "\n",
-    "tiledb_model_2 = TensorflowTileDBModel(uri='tiledb-keras-mnist-sequential-2')\n",
+    "tiledb_model_2 = KerasTensorflowTileDBModel(uri='tiledb-keras-mnist-sequential-2')\n",
     "\n",
     "tiledb_model_2.save(model=model,\n",
     "                    include_optimizer=True,\n",
@@ -472,7 +472,7 @@
     "model = create_deeper_model()\n",
     "model.fit(x_train, y_train, epochs=5)\n",
     "\n",
-    "tiledb_deeper_model = TensorflowTileDBModel(uri='tiledb-keras-mnist-sequential-deeper')\n",
+    "tiledb_deeper_model = KerasTensorflowTileDBModel(uri='tiledb-keras-mnist-sequential-deeper')\n",
     "\n",
     "tiledb_deeper_model.save(model=model,\n",
     "                         include_optimizer=True,\n",
