Renaming includes data-apis to readers in test files

--- a/examples/readers/pytorch_data_api_tiledb_dense.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_dense.ipynb
@@ -323,7 +323,7 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
-    "from tiledb.ml.data_apis.pytorch import PyTorchTileDBDenseDataset\n",
+    "from tiledb.ml.readers.pytorch import PyTorchTileDBDenseDataset\n",
     "\n",
     "class Net(nn.Module):\n",
     "    def __init__(self, shape):\n",
