--- a/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/pytorch_data_api_tiledb_sparse.ipynb
@@ -492,7 +492,7 @@
     }
    ],
    "source": [
-    "from tiledb.ml.data_apis.pytorch_sparse import PyTorchTileDBSparseDataset\n",
+    "from tiledb.ml.readers.pytorch_sparse import PyTorchTileDBSparseDataset\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = PyTorchTileDBSparseDataset(x_array=x, y_array=y, batch_size=32)\n",
