--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from tiledb.ml.data_apis.tensorflow import KerasTensorflowTileDBDenseDataset"
+    "from tiledb.ml.readers.tensorflow import KerasTensorflowTileDBDenseDataset"
    ]
   },
   {
