Renaming tensorflow.py

--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -23,7 +23,7 @@
     "import tiledb\n",
     "import os\n",
     "\n",
-    "from tiledb.ml.models.tensorflow import KerasTensorflowTileDBModel"
+    "from tiledb.ml.models.keras_tensorflow import KerasTensorflowTileDBModel"
    ]
   },
   {
