--- a/examples/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/examples/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "from pprint import pprint\n",
     "\n",
-    "from tiledb.ml.models.tensorflow import KerasTensorflowTileDBModel"
+    "from tiledb.ml.models.keras_tensorflow import KerasTensorflowTileDBModel"
    ]
   },
   {
