Import leftovers from rebase

--- a/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -18,7 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
+    "import tiledb.cloud\n",
     "import tiledb\n",
     "import os\n",
     "\n",
