Swap name ordering KerasTensorflow

--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -23,7 +23,7 @@
     "import tiledb.cloud\n",
     "import os\n",
     "\n",
-    "from tiledb.ml.models.keras_tensorflow import KerasTensorflowTileDBModel"
+    "from tiledb.ml.models.tensorflow_keras import TensorflowKerasTileDBModel"
    ]
   },
   {
@@ -133,9 +133,9 @@
     "# Define array model uri.\n",
     "uri = \"tiledb-tensorflow-model\"\n",
     "\n",
-    "print('Defining KerasTensorflowTileDBModel model...')\n",
+    "print('Defining TensorflowKerasTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = KerasTensorflowTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
+    "tiledb_model = TensorflowKerasTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -177,7 +177,7 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_model = KerasTensorflowTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_model = TensorflowKerasTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
     "\n",
     "print(np.equal(model.predict(X_test), loaded_model.predict(X_test)))\n",
     "\n",
