--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -135,7 +135,7 @@
     "\n",
     "print('Defining TensorflowKerasTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = TensorflowKerasTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
+    "tiledb_model = TensorflowKerasTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -144,7 +144,7 @@
     "# in order to interact with our model on TileDB-Cloud.\n",
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
-    "print('Saving model on TileDB-Cloud...')\n",
+    "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
     "tiledb_model.save(model=model)\n"
    ]
   },
