--- a/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -114,11 +114,11 @@
     "scaled_X_test = scaler.transform(X_test)\n",
     "\n",
     "print(\"Model fit...\")\n",
-    "clf = LogisticRegression(random_state=0).fit(scaled_X_train, y_train)\n",
+    "model = LogisticRegression(random_state=0).fit(scaled_X_train, y_train)\n",
     "\n",
     "print(\"Model score...\")\n",
-    "sparsity = np.mean(clf.coef_ == 0) * 100\n",
-    "score = clf.score(scaled_X_test, y_test)\n",
+    "sparsity = np.mean(model.coef_ == 0) * 100\n",
+    "score = model.score(scaled_X_test, y_test)\n",
     "\n",
     "print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
     "print(\"Test score with L1 penalty: %.4f\" % score)"
@@ -151,7 +151,7 @@
     "\n",
     "print('Defining SklearnTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = SklearnTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx)\n",
+    "tiledb_model = SklearnTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -160,7 +160,7 @@
     "# in order to interact with our model on TileDB-Cloud.\n",
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
-    "print('Saving model on TileDB-Cloud')\n",
+    "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
     "tiledb_model.save(\n",
     "    model=clf, meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score}\n",
     ")\n"
