minor updates to cloud notebooks

--- a/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
     "tiledb_model.save(\n",
-    "    model=clf, meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score}\n",
+    "    model=model, meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score}\n",
     ")\n"
    ]
   },
@@ -206,6 +206,13 @@
     "# Deregister model\n",
     "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
