Renaming of models API (#63)
* Renaming of models API
Co-authored-by: George Skoumas <george.skoumas@tiledb.com>

--- a/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from tiledb.ml.models.sklearn import SklearnTileDB"
+    "from tiledb.ml.models.sklearn import SklearnTileDBModel"
    ]
   },
   {
@@ -114,11 +114,11 @@
     "scaled_X_test = scaler.transform(X_test)\n",
     "\n",
     "print(\"Model fit...\")\n",
-    "clf = LogisticRegression(random_state=0).fit(scaled_X_train, y_train)\n",
+    "model = LogisticRegression(random_state=0).fit(scaled_X_train, y_train)\n",
     "\n",
     "print(\"Model score...\")\n",
-    "sparsity = np.mean(clf.coef_ == 0) * 100\n",
-    "score = clf.score(scaled_X_test, y_test)\n",
+    "sparsity = np.mean(model.coef_ == 0) * 100\n",
+    "score = model.score(scaled_X_test, y_test)\n",
     "\n",
     "print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
     "print(\"Test score with L1 penalty: %.4f\" % score)"
@@ -149,9 +149,9 @@
     "# Define array model uri.\n",
     "uri = \"tiledb-sklearn-model\"\n",
     "\n",
-    "print('Defining SklearnTileDB model...')\n",
+    "print('Defining SklearnTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = SklearnTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=clf)\n",
+    "tiledb_model = SklearnTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -160,9 +160,9 @@
     "# in order to interact with our model on TileDB-Cloud.\n",
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
-    "print('Saving model on TileDB-Cloud')\n",
+    "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
     "tiledb_model.save(\n",
-    "    model=clf, meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score}\n",
+    "    model=model, meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score}\n",
     ")\n"
    ]
   },
@@ -199,13 +199,20 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_tiledb_model = SklearnTileDB(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_tiledb_model = SklearnTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
     "\n",
     "print(score == loaded_tiledb_model.score(X_test, y_test))\n",
     "\n",
     "# Deregister model\n",
     "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
