--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -23,7 +23,7 @@
     "import tiledb.cloud\n",
     "import os\n",
     "\n",
-    "from tiledb.ml.models.tensorflow import TensorflowTileDB"
+    "from tiledb.ml.models.tensorflow_keras import TensorflowKerasTileDBModel"
    ]
   },
   {
@@ -133,9 +133,9 @@
     "# Define array model uri.\n",
     "uri = \"tiledb-tensorflow-model\"\n",
     "\n",
-    "print('Defining TensorflowTileDB model...')\n",
+    "print('Defining TensorflowKerasTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = TensorflowTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
+    "tiledb_model = TensorflowKerasTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "print(tiledb_model.uri)\n",
     "\n",
@@ -144,7 +144,7 @@
     "# in order to interact with our model on TileDB-Cloud.\n",
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
-    "print('Saving model on TileDB-Cloud...')\n",
+    "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
     "tiledb_model.save(model=model)\n"
    ]
   },
@@ -177,13 +177,12 @@
     "print(tiledb.cloud.array.info(tiledb_cloud_model_uri))\n",
     "\n",
     "# Load our model for inference\n",
-    "loaded_model = TensorflowTileDB(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
+    "loaded_model = TensorflowKerasTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load()\n",
     "\n",
     "print(np.equal(model.predict(X_test), loaded_model.predict(X_test)))\n",
     "\n",
     "# Deregister model\n",
-    "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)\n",
-    "\n"
+    "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)\n"
    ]
   },
   {
