--- a/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -27,7 +27,7 @@
     "import torch.optim as optim\n",
     "import torchvision\n",
     "\n",
-    "from tiledb.ml.models.pytorch import PyTorchTileDB\n",
+    "from tiledb.ml.models.pytorch import PyTorchTileDBModel\n",
     "\n",
     "epochs = 1\n",
     "batch_size_train = 128\n",
@@ -249,9 +249,9 @@
     "# Define array model uri.\n",
     "uri = \"tiledb-pytorch-model\"\n",
     "\n",
-    "print('Defining PyTorchTileDB model...')\n",
+    "print('Defining PyTorchTileDBModel model...')\n",
     "# In order to save our model on S3 and register it on TileDB-Cloud we have to pass our Namespace and TileDB Context.\n",
-    "tiledb_model = PyTorchTileDB(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
+    "tiledb_model = PyTorchTileDBModel(uri=uri, namespace=TILEDB_USER_NAME, ctx=ctx, model=model)\n",
     "\n",
     "# We will need the uri that was created from our model class\n",
     "# (and follows pattern tiledb://my_username/s3://my_bucket/my_array),\n",
@@ -300,7 +300,7 @@
     "loaded_optimizer = optim.SGD(model.parameters(), lr=learning_rate,\n",
     "                             momentum=momentum)\n",
     "\n",
-    "PyTorchTileDB(uri=tiledb_cloud_model_uri, ctx=ctx).load(model=loaded_model, optimizer=loaded_optimizer)\n",
+    "PyTorchTileDBModel(uri=tiledb_cloud_model_uri, ctx=ctx).load(model=loaded_model, optimizer=loaded_optimizer)\n",
     "\n",
     "\n",
     "# Check model parameters\n",
@@ -318,13 +318,6 @@
     "# Deregister model\n",
     "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
