--- a/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_sparse.ipynb
@@ -452,7 +452,7 @@
     }
    ],
    "source": [
-    "from tiledb.ml.data_apis.tensorflow_sparse import TensorflowTileDBSparseDataset\n",
+    "from tiledb.ml.readers.tensorflow_sparse import TensorflowTileDBSparseDataset\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = TensorflowTileDBSparseDataset(x_array=x, y_array=y, batch_size=32)\n",
