--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -236,12 +236,9 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1')\n",
+    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1', model=network, optimizer=optimizer)\n",
     "\n",
-    "tiledb_model_1.save(update=False, model_info={\n",
-    "    'model_state_dict': network.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    },\n",
+    "tiledb_model_1.save(update=False,\n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})"
    ]
@@ -413,10 +410,8 @@
     "  train(epoch)\n",
     "\n",
     "# and update\n",
-    "tiledb_model_1.save(update=True, model_info={\n",
-    "    'model_state_dict': network.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    },\n",
+    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1', model=network, optimizer=optimizer)\n",
+    "tiledb_model_1.save(update=True, \n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})\n",
     "\n",
@@ -521,12 +516,9 @@
     "for epoch in range(1, epochs + 1):\n",
     "    train(epoch)\n",
     "\n",
-    "tiledb_model_2 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-2')\n",
+    "tiledb_model_2 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-2', model=network, optimizer=optimizer)\n",
     "\n",
-    "tiledb_model_2.save(update=False, model_info={\n",
-    "    'model_state_dict': network.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    },\n",
+    "tiledb_model_2.save(update=False, \n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})"
    ]
@@ -574,6 +566,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -592,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
