--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -146,10 +146,9 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1')\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1', model=clf)\n",
     "\n",
-    "tiledb_model_1.save(model=clf,\n",
-    "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
+    "tiledb_model_1.save(meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})"
    ]
   },
@@ -263,8 +262,9 @@
     "print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
     "print(\"Test score with L1 penalty: %.4f\" % score)\n",
     "\n",
-    "tiledb_model_1.save(model=loaded_clf,\n",
-    "                    update=True,\n",
+    "\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1', model=loaded_clf)\n",
+    "tiledb_model_1.save(update=True,\n",
     "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})\n",
     "\n",
@@ -335,11 +335,10 @@
     "print(\"Test score: %.4f\" % score)\n",
     "\n",
     "# Declare a SklearnTileDBModel object\n",
-    "tiledb_model_2 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-2')\n",
+    "tiledb_model_2 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-2', model=clf)\n",
     "\n",
     "# Save model as a TileDB array\n",
-    "tiledb_model_2.save(model=clf,\n",
-    "                    meta={'score': score})"
+    "tiledb_model_2.save(meta={'score': score})"
    ]
   },
   {
@@ -384,6 +383,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -402,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
