final improvements in model jupyter notebooks

--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -218,10 +218,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can save\n",
-    "optimizer's state_dict in our TileDB array. In case we will use our model only for inference, we don't have to save optimizer's\n",
-    "state_dict and we only keep model's state_dict. We first declare a PytTorchTileDB object (with the corresponding uri) and then\n",
-    "save the model as a TileDB array. Finally, we can save any kind of meta data (in any structure, i.e., list, tuple or dictionary)\n",
+    "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can also save\n",
+    "the optimizer in our TileDB array. In case we will use our model only for inference, we don't have to save the optimizer and we\n",
+    "only keep the model. We first declare a PytTorchTileDB object and initialize it with the corresponding TileDB uri, model and optimizer,\n",
+    "and then save the model as a TileDB array. Finally, we can save any kind of metadata (in any structure, i.e., list, tuple or dictionary)\n",
     "by passing a dictionary to the meta attribute."
    ]
   },
@@ -314,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the case of PyTorch models, as mentioned above, we save model's state_dict and optimizer's state_dict,\n",
+    "For the case of PyTorch models, internally, we save model's state_dict and optimizer's state_dict,\n",
     "as [variable sized attributes)](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/writing-arrays/var-length-attributes)\n",
     "(pickled), i.e., we can open the TileDB and get only the state_dict of the model or optimizer,\n",
     "without bringing the whole model in memory. For example, we can load model's and optimizer's state_dict\n",
