--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -132,7 +132,7 @@
     "TileDB array in terms of files on disk please take a look [here](https://docs.tiledb.com/main/basic-concepts/data-format).\n",
     "At the moment (will change in the future) we use pickle, which is one of the [most common scenarios for sklearn models](https://scikit-learn.org/stable/modules/model_persistence.html),\n",
     "to serialize the whole model and save it as a [variable sized attribute](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/writing-arrays/var-length-attributes)\n",
-    "in a TileDB array.  We first declare a SklearnTileDBModel object (with the corresponding uri) and then save the model as a TileDB array.\n",
+    "in a TileDB array.  We first declare a SklearnTileDBModel object (with the corresponding uri and model attributes) and then save the model as a TileDB array.\n",
     "Finally, we can save any kind of metadata (in any structure, i.e., list, tuple or dictionary) by passing a dictionary to the meta attribute."
    ]
   },
@@ -156,7 +156,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above step will create a TileDB array in your working directory. Let's open our TileDB array model and check metadata. Metadata that are of type list, dict or tuple have been JSON\n",
+    "The above step will create a TileDB array in your working directory. Let's open our TileDB array model and check metadata.\n",
+    "Metadata that are of type list, dict or tuple have been JSON\n",
     "serialized while saving, i.e., we need json.loads to deserialize them."
    ]
   },
