--- a/examples/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/examples/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -115,8 +115,8 @@
    "source": [
     "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can save\n",
     "optimizer's information in our TileDB array. In case we will use our model only for inference, we don't have to save optimizer's\n",
-    "information and we only keep model's weights. We first declare a TileDB-Keras model object (with the corresponding uri) and then\n",
-    "save the model as a TileDB array."
+    "information and we only keep model's weights. We first declare a TileDB-Keras model object (with the corresponding uri and model attributes)\n",
+    "and then save the model as a TileDB array."
    ]
   },
   {
@@ -344,8 +344,8 @@
     "What is really nice with saving models as TileDB array, is native versioning based on fragments as described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#immutable-fragments). We can load a model, retrain it\n",
     "with new data and update the already existing TileDB model array with new model parameters and metadata. All information, old\n",
-    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures for the same\n",
-    "problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
+    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures\n",
+    "for the same problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
     "let's continue training model_1 with the rest of our dataset and for 5 more epochs. After training is done, you will\n",
     "notice the extra directories and files (fragments) added to tiledb-keras-mnist-sequential-1 TileDB array directory,\n",
     "which keep all versions of the model."
