fixed cloud model examples

--- a/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/pytorch_tiledb_cloud_ml_model_array.ipynb
@@ -259,11 +259,8 @@
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
     "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
-    "tiledb_model.save(model_info={\n",
-    "    'model_state_dict': model.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    }, meta={'epochs': epochs,\n",
-    "            'train_loss': train_losses})\n"
+    "tiledb_model.save(meta={'epochs': epochs,\n",
+    "                        'train_loss': train_losses})\n"
    ]
   },
   {
@@ -279,6 +276,7 @@
    "execution_count": null,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -318,6 +316,13 @@
     "# Deregister model\n",
     "tiledb.cloud.deregister_array(tiledb_cloud_model_uri)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
