--- a/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/sklearn_tiledb_cloud_ml_model_array.ipynb
@@ -161,9 +161,7 @@
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
     "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
-    "tiledb_model.save(\n",
-    "    model=model, meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score}\n",
-    ")\n"
+    "tiledb_model.save(meta={\"Sparsity_with_L1_penalty\": sparsity, \"score\": score})\n"
    ]
   },
   {
