--- a/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
+++ b/examples/cloud/tensorflow_tiledb_cloud_ml_model_array.ipynb
@@ -145,7 +145,7 @@
     "tiledb_cloud_model_uri = tiledb_model.uri\n",
     "\n",
     "print('Saving model on S3 and registering on TileDB-Cloud...')\n",
-    "tiledb_model.save(model=model)\n"
+    "tiledb_model.save()\n"
    ]
   },
   {
