Change Model API (#66)
* changes to all model apis and unit tests

* model notebooks changes

* fixed cloud model examples

* PR changes

--- a/examples/models/pytorch_tiledb_models_example.ipynb
+++ b/examples/models/pytorch_tiledb_models_example.ipynb
@@ -218,10 +218,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can save\n",
-    "optimizer's state_dict in our TileDB array. In case we will use our model only for inference, we don't have to save optimizer's\n",
-    "state_dict and we only keep model's state_dict. We first declare a PytTorchTileDB object (with the corresponding uri) and then\n",
-    "save the model as a TileDB array. Finally, we can save any kind of meta data (in any structure, i.e., list, tuple or dictionary)\n",
+    "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can also save\n",
+    "the optimizer in our TileDB array. In case we will use our model only for inference, we don't have to save the optimizer and we\n",
+    "only keep the model. We first declare a PytTorchTileDB object and initialize it with the corresponding TileDB uri, model and optimizer,\n",
+    "and then save the model as a TileDB array. Finally, we can save any kind of metadata (in any structure, i.e., list, tuple or dictionary)\n",
     "by passing a dictionary to the meta attribute."
    ]
   },
@@ -236,12 +236,9 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1')\n",
+    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1', model=network, optimizer=optimizer)\n",
     "\n",
-    "tiledb_model_1.save(update=False, model_info={\n",
-    "    'model_state_dict': network.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    },\n",
+    "tiledb_model_1.save(update=False,\n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})"
    ]
@@ -317,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the case of PyTorch models, as mentioned above, we save model's state_dict and optimizer's state_dict,\n",
+    "For the case of PyTorch models, internally, we save model's state_dict and optimizer's state_dict,\n",
     "as [variable sized attributes)](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/writing-arrays/var-length-attributes)\n",
     "(pickled), i.e., we can open the TileDB and get only the state_dict of the model or optimizer,\n",
     "without bringing the whole model in memory. For example, we can load model's and optimizer's state_dict\n",
@@ -413,10 +410,8 @@
     "  train(epoch)\n",
     "\n",
     "# and update\n",
-    "tiledb_model_1.save(update=True, model_info={\n",
-    "    'model_state_dict': network.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    },\n",
+    "tiledb_model_1 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-1', model=network, optimizer=optimizer)\n",
+    "tiledb_model_1.save(update=True, \n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})\n",
     "\n",
@@ -521,12 +516,9 @@
     "for epoch in range(1, epochs + 1):\n",
     "    train(epoch)\n",
     "\n",
-    "tiledb_model_2 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-2')\n",
+    "tiledb_model_2 = PyTorchTileDBModel(uri='tiledb-pytorch-mnist-2', model=network, optimizer=optimizer)\n",
     "\n",
-    "tiledb_model_2.save(update=False, model_info={\n",
-    "    'model_state_dict': network.state_dict(),\n",
-    "    'optimizer_state_dict': optimizer.state_dict(),\n",
-    "    },\n",
+    "tiledb_model_2.save(update=False, \n",
     "                    meta={'epochs': epochs,\n",
     "                          'train_loss': train_losses})"
    ]
@@ -574,6 +566,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -592,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
