--- a/examples/models/sklearn_tiledb_models_example.ipynb
+++ b/examples/models/sklearn_tiledb_models_example.ipynb
@@ -132,7 +132,7 @@
     "TileDB array in terms of files on disk please take a look [here](https://docs.tiledb.com/main/basic-concepts/data-format).\n",
     "At the moment (will change in the future) we use pickle, which is one of the [most common scenarios for sklearn models](https://scikit-learn.org/stable/modules/model_persistence.html),\n",
     "to serialize the whole model and save it as a [variable sized attribute](https://docs.tiledb.com/main/solutions/tiledb-embedded/api-usage/writing-arrays/var-length-attributes)\n",
-    "in a TileDB array.  We first declare a SklearnTileDBModel object (with the corresponding uri) and then save the model as a TileDB array.\n",
+    "in a TileDB array.  We first declare a SklearnTileDBModel object (with the corresponding uri and model attributes) and then save the model as a TileDB array.\n",
     "Finally, we can save any kind of metadata (in any structure, i.e., list, tuple or dictionary) by passing a dictionary to the meta attribute."
    ]
   },
@@ -146,10 +146,9 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1')\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1', model=clf)\n",
     "\n",
-    "tiledb_model_1.save(model=clf,\n",
-    "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
+    "tiledb_model_1.save(meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})"
    ]
   },
@@ -157,7 +156,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above step will create a TileDB array in your working directory. Let's open our TileDB array model and check metadata. Metadata that are of type list, dict or tuple have been JSON\n",
+    "The above step will create a TileDB array in your working directory. Let's open our TileDB array model and check metadata.\n",
+    "Metadata that are of type list, dict or tuple have been JSON\n",
     "serialized while saving, i.e., we need json.loads to deserialize them."
    ]
   },
@@ -263,8 +263,9 @@
     "print(\"Sparsity with L1 penalty: %.2f%%\" % sparsity)\n",
     "print(\"Test score with L1 penalty: %.4f\" % score)\n",
     "\n",
-    "tiledb_model_1.save(model=loaded_clf,\n",
-    "                    update=True,\n",
+    "\n",
+    "tiledb_model_1 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-1', model=loaded_clf)\n",
+    "tiledb_model_1.save(update=True,\n",
     "                    meta={'Sparsity_with_L1_penalty': sparsity,\n",
     "                          'score': score})\n",
     "\n",
@@ -335,11 +336,10 @@
     "print(\"Test score: %.4f\" % score)\n",
     "\n",
     "# Declare a SklearnTileDBModel object\n",
-    "tiledb_model_2 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-2')\n",
+    "tiledb_model_2 = SklearnTileDBModel(uri='tiledb-sklearn-mnist-2', model=clf)\n",
     "\n",
     "# Save model as a TileDB array\n",
-    "tiledb_model_2.save(model=clf,\n",
-    "                    meta={'score': score})"
+    "tiledb_model_2.save(meta={'score': score})"
    ]
   },
   {
@@ -384,6 +384,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -402,7 +409,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
