--- a/examples/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/examples/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -115,8 +115,8 @@
    "source": [
     "We can now save the trained model as a TileDB array. In case we want to train  the model further in a later time, we can save\n",
     "optimizer's information in our TileDB array. In case we will use our model only for inference, we don't have to save optimizer's\n",
-    "information and we only keep model's weights. We first declare a TileDB-Keras model object (with the corresponding uri) and then\n",
-    "save the model as a TileDB array."
+    "information and we only keep model's weights. We first declare a TileDB-Keras model object (with the corresponding uri and model attributes)\n",
+    "and then save the model as a TileDB array."
    ]
   },
   {
@@ -129,10 +129,9 @@
    },
    "outputs": [],
    "source": [
-    "tiledb_model_1 = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-1')\n",
+    "tiledb_model_1 = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-1', model=model)\n",
     "\n",
-    "tiledb_model_1.save(model=model,\n",
-    "                    include_optimizer=True,\n",
+    "tiledb_model_1.save(include_optimizer=True,\n",
     "                    update=False)"
    ]
   },
@@ -227,14 +226,12 @@
     "model = create_model()\n",
     "model.fit(x_train[:30000], y_train[:30000], epochs=5)\n",
     "\n",
-    "tiledb_model_2 = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-2')\n",
+    "tiledb_model_2 = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-2', model=model)\n",
     "\n",
-    "tiledb_model_2.save(model=model,\n",
-    "                    include_optimizer=True,\n",
+    "tiledb_model_2.save(include_optimizer=True,\n",
     "                    update=False,\n",
     "                    meta={\"accuracy\": model.history.history['accuracy'],\n",
     "                          \"loss\": model.history.history['loss'],\n",
-    "                          \"version\": '0.0.1',\n",
     "                          \"status\": 'experimental'})\n",
     "\n",
     "# Check array directory\n",
@@ -347,8 +344,8 @@
     "What is really nice with saving models as TileDB array, is native versioning based on fragments as described\n",
     "[here](https://docs.tiledb.com/main/basic-concepts/data-format#immutable-fragments). We can load a model, retrain it\n",
     "with new data and update the already existing TileDB model array with new model parameters and metadata. All information, old\n",
-    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures for the same\n",
-    "problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
+    "and new will be there and accessible. This is extremely useful when you retrain with new data or trying different architectures\n",
+    "for the same problem, and you want to keep track of all your experiments without having to store different model instances. In our case,\n",
     "let's continue training model_1 with the rest of our dataset and for 5 more epochs. After training is done, you will\n",
     "notice the extra directories and files (fragments) added to tiledb-keras-mnist-sequential-1 TileDB array directory,\n",
     "which keep all versions of the model."
@@ -368,8 +365,8 @@
     "loaded_model_1.fit(x_train[30000:], y_train[30000:], epochs=5)\n",
     "\n",
     "# and update\n",
-    "tiledb_model_1.save(model=loaded_model_1,\n",
-    "                    include_optimizer=True,\n",
+    "tiledb_model_1 = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-1', model=loaded_model_1)\n",
+    "tiledb_model_1.save(include_optimizer=True,\n",
     "                    update=True,\n",
     "                    meta={\"accuracy\": model.history.history['accuracy'],\n",
     "                          \"loss\": model.history.history['loss'],\n",
@@ -472,15 +469,13 @@
     "model = create_deeper_model()\n",
     "model.fit(x_train, y_train, epochs=5)\n",
     "\n",
-    "tiledb_deeper_model = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-deeper')\n",
+    "tiledb_deeper_model = TensorflowKerasTileDBModel(uri='tiledb-keras-mnist-sequential-deeper', model=model)\n",
     "\n",
-    "tiledb_deeper_model.save(model=model,\n",
-    "                         include_optimizer=True,\n",
+    "tiledb_deeper_model.save(include_optimizer=True,\n",
     "                         update=False,\n",
-    "                        meta={\"accuracy\": model.history.history['accuracy'],\n",
-    "                              \"loss\": model.history.history['loss'],\n",
-    "                              \"version\": '0.0.1',\n",
-    "                              \"status\": 'experimental'})\n",
+    "                         meta={\"accuracy\": model.history.history['accuracy'],\n",
+    "                               \"loss\": model.history.history['loss'],\n",
+    "                               \"status\": 'experimental'})\n",
     "\n",
     "# Check array directory\n",
     "print()\n",
@@ -539,6 +534,13 @@
    "source": [
     "tiledb.ls('MNIST_Group', lambda obj_path, obj_type: print(obj_path, obj_type))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -557,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
