--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -209,9 +209,9 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 27), tile=28, dtype='int32'),\n",
-      "    Dim(name='dim_2', domain=(0, 27), tile=28, dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 27), tile='28', dtype='int32'),\n",
+      "    Dim(name='dim_2', domain=(0, 27), tile='28', dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float64', var=False, nullable=False),\n",
@@ -225,7 +225,7 @@
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -269,7 +269,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17ec58e50>"
+       "<matplotlib.image.AxesImage at 0x176702c50>"
       ]
      },
      "execution_count": 6,
@@ -346,36 +346,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/5\n",
-      "938/938 [==============================] - 2s 1ms/step - loss: 0.3529 - accuracy: 0.8979\n",
-      "Epoch 2/5\n",
-      "938/938 [==============================] - 1s 1ms/step - loss: 0.1695 - accuracy: 0.9502\n",
-      "Epoch 3/5\n",
-      "938/938 [==============================] - 1s 1ms/step - loss: 0.1255 - accuracy: 0.9633\n",
-      "Epoch 4/5\n",
-      "938/938 [==============================] - 1s 995us/step - loss: 0.1036 - accuracy: 0.9683\n",
-      "Epoch 5/5\n",
-      "938/938 [==============================] - 1s 1ms/step - loss: 0.0847 - accuracy: 0.9743\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = create_model()\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = TensorflowTileDBDenseDataset(\n",
-    "        x_array=x, y_array=y, batch_size=64\n",
+    "        x_array=x, y_array=y, x_attributes=['features'], y_attributes=['features'], batch_size=64\n",
     "    )\n",
     "\n",
     "    model.fit(tiledb_dataset, epochs=5)"
@@ -383,36 +366,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"sequential\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "flatten (Flatten)            (None, 784)               0         \n",
-      "_________________________________________________________________\n",
-      "dense (Dense)                (None, 128)               100480    \n",
-      "_________________________________________________________________\n",
-      "dropout (Dropout)            (None, 128)               0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 10)                1290      \n",
-      "=================================================================\n",
-      "Total params: 101,770\n",
-      "Trainable params: 101,770\n",
-      "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
