changed tf reader example notebooks for multiple attribute compatibility

--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -14,6 +14,7 @@
    "execution_count": 1,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -39,6 +40,7 @@
    "execution_count": 2,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -47,57 +49,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "(60000, 28, 28)\n",
       "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]]\n",
-      "\n",
-      "[5 0 4 ... 5 6 8]\n"
+      "(60000,)\n"
      ]
     }
    ],
@@ -106,9 +60,9 @@
     "(images, labels), _ = mnist.load_data()\n",
     "images = images / 255.0\n",
     "\n",
-    "print(images)\n",
+    "print(images.shape)\n",
     "print()\n",
-    "print(labels)"
+    "print(labels.shape)"
    ]
   },
   {
@@ -128,6 +82,7 @@
    "execution_count": 3,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -175,6 +130,7 @@
    "execution_count": 4,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -199,6 +155,7 @@
    "execution_count": 5,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -262,6 +219,7 @@
    "execution_count": 6,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -269,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x176702c50>"
+       "<matplotlib.image.AxesImage at 0x175806510>"
       ]
      },
      "execution_count": 6,
@@ -311,6 +269,7 @@
    "execution_count": 7,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -346,19 +305,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "938/938 [==============================] - 8s 8ms/step - loss: 0.3498 - accuracy: 0.9007\n",
+      "Epoch 2/5\n",
+      "938/938 [==============================] - 7s 8ms/step - loss: 0.1682 - accuracy: 0.9505\n",
+      "Epoch 3/5\n",
+      "938/938 [==============================] - 7s 8ms/step - loss: 0.1260 - accuracy: 0.9629\n",
+      "Epoch 4/5\n",
+      "938/938 [==============================] - 7s 8ms/step - loss: 0.1028 - accuracy: 0.9697\n",
+      "Epoch 5/5\n",
+      "938/938 [==============================] - 8s 8ms/step - loss: 0.0853 - accuracy: 0.9746\n"
+     ]
+    }
+   ],
    "source": [
     "model = create_model()\n",
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = TensorflowTileDBDenseDataset(\n",
-    "        x_array=x, y_array=y, x_attributes=['features'], y_attributes=['features'], batch_size=64\n",
+    "        x_array=x, y_array=y, x_attribute_names=['features'], y_attribute_names=['features'], batch_size=64\n",
     "    )\n",
     "\n",
     "    model.fit(tiledb_dataset, epochs=5)"
@@ -366,13 +343,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "flatten (Flatten)            (None, 784)               0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 128)               100480    \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 10)                1290      \n",
+      "=================================================================\n",
+      "Total params: 101,770\n",
+      "Trainable params: 101,770\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
@@ -380,7 +381,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   }
