--- a/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
+++ b/examples/readers/tensorflow_data_api_tiledb_dense.ipynb
@@ -14,6 +14,7 @@
    "execution_count": 1,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -39,6 +40,7 @@
    "execution_count": 2,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -47,57 +49,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
+      "(60000, 28, 28)\n",
       "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]\n",
-      "\n",
-      " [[0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  ...\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]\n",
-      "  [0. 0. 0. ... 0. 0. 0.]]]\n",
-      "\n",
-      "[5 0 4 ... 5 6 8]\n"
+      "(60000,)\n"
      ]
     }
    ],
@@ -106,9 +60,9 @@
     "(images, labels), _ = mnist.load_data()\n",
     "images = images / 255.0\n",
     "\n",
-    "print(images)\n",
+    "print(images.shape)\n",
     "print()\n",
-    "print(labels)"
+    "print(labels.shape)"
    ]
   },
   {
@@ -128,6 +82,7 @@
    "execution_count": 3,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -175,6 +130,7 @@
    "execution_count": 4,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -199,6 +155,7 @@
    "execution_count": 5,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -209,9 +166,9 @@
      "text": [
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
-      "    Dim(name='dim_1', domain=(0, 27), tile=28, dtype='int32'),\n",
-      "    Dim(name='dim_2', domain=(0, 27), tile=28, dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
+      "    Dim(name='dim_1', domain=(0, 27), tile='28', dtype='int32'),\n",
+      "    Dim(name='dim_2', domain=(0, 27), tile='28', dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='float64', var=False, nullable=False),\n",
@@ -225,7 +182,7 @@
       "\n",
       "ArraySchema(\n",
       "  domain=Domain(*[\n",
-      "    Dim(name='dim_0', domain=(0, 59999), tile=64, dtype='int32'),\n",
+      "    Dim(name='dim_0', domain=(0, 59999), tile='64', dtype='int32'),\n",
       "  ]),\n",
       "  attrs=[\n",
       "    Attr(name='features', dtype='uint8', var=False, nullable=False),\n",
@@ -262,6 +219,7 @@
    "execution_count": 6,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -269,7 +227,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x17ec58e50>"
+       "<matplotlib.image.AxesImage at 0x175806510>"
       ]
      },
      "execution_count": 6,
@@ -311,6 +269,7 @@
    "execution_count": 7,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -349,6 +308,7 @@
    "execution_count": 8,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -358,15 +318,15 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "938/938 [==============================] - 2s 1ms/step - loss: 0.3529 - accuracy: 0.8979\n",
+      "938/938 [==============================] - 8s 8ms/step - loss: 0.3498 - accuracy: 0.9007\n",
       "Epoch 2/5\n",
-      "938/938 [==============================] - 1s 1ms/step - loss: 0.1695 - accuracy: 0.9502\n",
+      "938/938 [==============================] - 7s 8ms/step - loss: 0.1682 - accuracy: 0.9505\n",
       "Epoch 3/5\n",
-      "938/938 [==============================] - 1s 1ms/step - loss: 0.1255 - accuracy: 0.9633\n",
+      "938/938 [==============================] - 7s 8ms/step - loss: 0.1260 - accuracy: 0.9629\n",
       "Epoch 4/5\n",
-      "938/938 [==============================] - 1s 995us/step - loss: 0.1036 - accuracy: 0.9683\n",
+      "938/938 [==============================] - 7s 8ms/step - loss: 0.1028 - accuracy: 0.9697\n",
       "Epoch 5/5\n",
-      "938/938 [==============================] - 1s 1ms/step - loss: 0.0847 - accuracy: 0.9743\n"
+      "938/938 [==============================] - 8s 8ms/step - loss: 0.0853 - accuracy: 0.9746\n"
      ]
     }
    ],
@@ -375,7 +335,7 @@
     "\n",
     "with tiledb.open('training_images') as x, tiledb.open('training_labels') as y:\n",
     "    tiledb_dataset = TensorflowTileDBDenseDataset(\n",
-    "        x_array=x, y_array=y, batch_size=64\n",
+    "        x_array=x, y_array=y, x_attribute_names=['features'], y_attribute_names=['features'], batch_size=64\n",
     "    )\n",
     "\n",
     "    model.fit(tiledb_dataset, epochs=5)"
@@ -386,6 +346,7 @@
    "execution_count": 9,
    "metadata": {
     "pycharm": {
+     "is_executing": true,
      "name": "#%%\n"
     }
    },
@@ -420,7 +381,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "is_executing": true
+    }
+   },
    "outputs": [],
    "source": []
   }
