Tests for subclassed models

--- a/examples/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/examples/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -624,31 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf\n",
-    "import tiledb\n",
-    "import os\n",
-    "import glob\n",
-    "import json\n",
-    "import pickle\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from pprint import pprint\n",
-    "\n",
-    "from tiledb.ml.models.tensorflow_keras import TensorflowKerasTileDBModel"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "from tensorflow import keras\n",
@@ -694,17 +670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-03 02:35:08.945014: I tensorflow/core/platform/cpu_feature_guard.cc:142] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "outputs": [],
    "source": [
     "model = CustomModel([16, 16, 10])\n",
     "# Build the model by calling it\n",
@@ -732,12 +699,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "tiledb_model_custom = TensorflowKerasTileDBModel(uri='tiledb-keras-custom-model', model=model)\n",
-    "\n",
-    "tiledb_model_custom.save(include_optimizer=True, update=False)"
+    "tiledb_model_custom.save(include_optimizer=True, update=False)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -747,47 +713,34 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "Loading the subclassed model requires `custom_objects` to be passed as an argument\n",
+    "and the `input_shape` of the model so it can be built. The output of two models are\n",
+    "exactly the same"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-09-03 02:35:21.046877: W tensorflow/python/util/util.cc:348] Sets are not currently considered sequences, but this may change in the future, so consider avoiding using them.\n"
-     ]
+     "data": {
+      "text/plain": "<tf.Tensor: shape=(1, 10), dtype=bool, numpy=\narray([[ True,  True,  True,  True,  True,  True,  True,  True,  True,\n         True]])>"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "loaded_custom = tiledb_model_custom.load(custom_objects={\"CustomModel\": CustomModel}, input_shape=(1, 5))"
+    "loaded_custom = tiledb_model_custom.load(custom_objects={\"CustomModel\": CustomModel}, input_shape=(1, 5))\n",
+    "outputs_loaded = loaded_custom(input_arr)\n",
+    "outputs == outputs_loaded"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "model_array_3 = tiledb.open('tiledb-keras-custom-model')\n",
-    "model_array_3_weights = pickle.loads(model_array_3['model_weights'].item(0))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
