--- a/examples/models/tensorflow_keras_tiledb_models_example.ipynb
+++ b/examples/models/tensorflow_keras_tiledb_models_example.ipynb
@@ -659,7 +659,7 @@
    "outputs": [],
    "source": [
     "loaded_custom = tiledb_model_custom.load(custom_objects={\"CustomModel\": CustomModel}, input_shape=(1, 5))\n",
-    "outputs_loaded = loaded_custom(input_arr)\n",
+    "outputs_loaded = loaded_custom((1, 5))\n",
     "outputs == outputs_loaded"
    ],
    "metadata": {
